--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokemon",
+  "name": "pokemon-static",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "axios": "^0.27.2",
+    "canvas-confetti": "^1.5.1",
+    "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.7.19",
-    "@types/react": "18.0.21",
+    "@types/canvas-confetti": "^1.4.3",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
     "typescript": "4.8.3"
   }
 }
